crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__audit_test-solved.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Mutation.add\", color=forestgreen ]\n    2 [ label = \"Mutation.multiply\", color=forestgreen ]\n    3 [ label = \"Mutation.add\", color=forestgreen ]\n    4 [ label = \"Mutation.delete\", color=forestgreen ]\n    5 [ label = \"Root#c\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    6 [ label = \"add#c\", shape=box, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"Root#a\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"multiply#a\", shape=box, color=dodgerblue, color=forestgreen ]\n    9 [ label = \"add#c\", shape=box, color=dodgerblue, color=forestgreen ]\n    10 [ label = \"Root#b\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    11 [ label = \"delete#b\", shape=box, color=dodgerblue, color=forestgreen ]\n    12 [ label=\"\", style=dashed]\n    0 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    6 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    0 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 9 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    0 -> 10 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 11 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    11 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    12 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Mutation.add", steiner=1 ]
    2 [ label = "Mutation.multiply", steiner=1 ]
    3 [ label = "Mutation.add", steiner=1 ]
    4 [ label = "Mutation.delete", steiner=1 ]
    5 [ label = "Root#c", steiner=1 ]
    6 [ label = "add#c", steiner=1 ]
    7 [ label = "Root#a", steiner=1 ]
    8 [ label = "multiply#a", steiner=1 ]
    9 [ label = "add#c", steiner=1 ]
    10 [ label = "Root#b", steiner=1 ]
    11 [ label = "delete#b", steiner=1 ]
    12 [ label="", style=dashed]
    0 -> 5 [ cost=0, steiner=1]
    5 -> 6 [ cost=0, steiner=1]
    6 -> 1 [ cost=0, steiner=1]
    0 -> 7 [ cost=0, steiner=1]
    7 -> 8 [ cost=0, steiner=1]
    8 -> 2 [ cost=0, steiner=1]
    5 -> 9 [ cost=0, steiner=1]
    9 -> 3 [ cost=0, steiner=1]
    0 -> 10 [ cost=0, steiner=1]
    10 -> 11 [ cost=0, steiner=1]
    11 -> 4 [ cost=0, steiner=1]
    12 -> 0 [ cost=0, steiner=0]
}
