crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__audit_test-solver.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Mutation.add\", style=dashed ]\n    2 [ label = \"Mutation.multiply\", style=dashed ]\n    3 [ label = \"Mutation.add\", style=dashed ]\n    4 [ label = \"Mutation.delete\", style=dashed ]\n    5 [ label = \"Root#c\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    6 [ label = \"add#c\", shape=box, color=dodgerblue, style=dashed ]\n    7 [ label = \"Root#a\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    8 [ label = \"multiply#a\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"add#c\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"Root#b\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    11 [ label = \"delete#b\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label=\"\", style=dashed]\n    0 -> 5 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 7 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 10 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Mutation.add", steiner=0 ]
    2 [ label = "Mutation.multiply", steiner=0 ]
    3 [ label = "Mutation.add", steiner=0 ]
    4 [ label = "Mutation.delete", steiner=0 ]
    5 [ label = "Root#c", steiner=0 ]
    6 [ label = "add#c", steiner=0 ]
    7 [ label = "Root#a", steiner=0 ]
    8 [ label = "multiply#a", steiner=0 ]
    9 [ label = "add#c", steiner=0 ]
    10 [ label = "Root#b", steiner=0 ]
    11 [ label = "delete#b", steiner=0 ]
    12 [ label="", style=dashed]
    0 -> 5 [ cost=1, steiner=0]
    5 -> 6 [ cost=0, steiner=0]
    6 -> 1 [ cost=0, steiner=0]
    0 -> 7 [ cost=1, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 2 [ cost=0, steiner=0]
    5 -> 9 [ cost=0, steiner=0]
    9 -> 3 [ cost=0, steiner=0]
    0 -> 10 [ cost=1, steiner=0]
    10 -> 11 [ cost=0, steiner=0]
    11 -> 4 [ cost=0, steiner=0]
    12 -> 0 [ cost=0, steiner=0]
}
