crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__consecutive_subgraphs-solver.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Review.id\", style=dashed ]\n    2 [ label = \"Product.upc\", style=dashed ]\n    3 [ label = \"User.id\", style=dashed ]\n    4 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    5 [ label = \"createUser#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    6 [ label = \"id#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    7 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    8 [ label = \"createProduct#products\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"upc#products\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"Root#reviews\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    11 [ label = \"createReview#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label = \"id#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label=\"\", style=dashed]\n    0 -> 4 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 7 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 10 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Review.id", steiner=0 ]
    2 [ label = "Product.upc", steiner=0 ]
    3 [ label = "User.id", steiner=0 ]
    4 [ label = "Root#accounts", steiner=0 ]
    5 [ label = "createUser#accounts", steiner=0 ]
    6 [ label = "id#accounts", steiner=0 ]
    7 [ label = "Root#products", steiner=0 ]
    8 [ label = "createProduct#products", steiner=0 ]
    9 [ label = "upc#products", steiner=0 ]
    10 [ label = "Root#reviews", steiner=0 ]
    11 [ label = "createReview#reviews", steiner=0 ]
    12 [ label = "id#reviews", steiner=0 ]
    13 [ label="", style=dashed]
    0 -> 4 [ cost=1, steiner=0]
    4 -> 5 [ cost=0, steiner=0]
    5 -> 6 [ cost=0, steiner=0]
    6 -> 3 [ cost=0, steiner=0]
    0 -> 7 [ cost=1, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 9 [ cost=0, steiner=0]
    9 -> 2 [ cost=0, steiner=0]
    0 -> 10 [ cost=1, steiner=0]
    10 -> 11 [ cost=0, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 1 [ cost=0, steiner=0]
    13 -> 0 [ cost=0, steiner=0]
}
