crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__single_subgraph-finalized-solution.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#accounts\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"updateUser\" ]\n    3 [ label = \"id\" ]\n    4 [ label = \"createUser\" ]\n    5 [ label = \"id\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    4 -> 5 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    1 -> 4 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#accounts" ]
    2 [ label = "updateUser" ]
    3 [ label = "id" ]
    4 [ label = "createUser" ]
    5 [ label = "id" ]
    0 -> 1 [ label = "QueryPartition" ]
    4 -> 5 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    1 -> 4 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
}
