crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__single_subgraph-graph.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Mutation.createUser\" ]\n    2 [ label = \"Mutation.updateUser\" ]\n    3 [ label = \"User.id\" ]\n    4 [ label = \"User.id\" ]\n    5 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue ]\n    6 [ label = \"createUser#accounts\", shape=box, color=dodgerblue ]\n    7 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    8 [ label = \"updateUser#accounts\", shape=box, color=dodgerblue ]\n    9 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    0 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    1 -> 4 [ label = \"\" ]\n    0 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 5 [ label = \"\", style=dashed,arrowhead=none ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Mutation.createUser]
    2 [ Mutation.updateUser]
    3 [ User.id]
    4 [ User.id]
    5 [ Root#accounts]
    6 [ createUser#accounts]
    7 [ id#accounts]
    8 [ updateUser#accounts]
    9 [ id#accounts]
    0 -> 1 [ label = "Field" ]
    0 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    1 -> 4 [ label = "Field" ]
    0 -> 5 [ label = "CreateChildResolver" ]
    0 -> 5 [ label = "HasChildResolver" ]
    5 -> 6 [ label = "CanProvide" ]
    6 -> 1 [ label = "Provides" ]
    6 -> 7 [ label = "CanProvide" ]
    7 -> 4 [ label = "Provides" ]
    5 -> 8 [ label = "CanProvide" ]
    8 -> 2 [ label = "Provides" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 3 [ label = "Provides" ]
}
