crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__single_subgraph-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#accounts\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Mutation.createUser\" ]\n    3 [ label = \"User.id\" ]\n    4 [ label = \"Mutation.updateUser\" ]\n    5 [ label = \"User.id\" ]\n    0 -> 1 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [  ]\n    2 -> 3 [  ]\n    1 -> 4 [  ]\n    4 -> 5 [  ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#accounts" ]
    2 [ label = "Mutation.createUser" ]
    3 [ label = "User.id" ]
    4 [ label = "Mutation.updateUser" ]
    5 [ label = "User.id" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    1 -> 4 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
}
